--- a/data/prompts/migration_manifest.json
+++ b/data/prompts/migration_manifest.json
@@ -1,7 +1,7 @@
 {
   "migrations": [
     {
-      "migration_id": "mig_dfcx_billing_billing_payment_query_dev_to_qa_20260223130915",
+      "migration_id": "mig_dfcx_billing_billing_payment_query_dev_to_qa_20260224060104",
       "source_prompt_id": "dfcx_billing_billing_payment_query_dev",
       "target_prompt_id": "dfcx_billing_billing_payment_query_qa",
       "source_env": "dev",
@@ -9,7 +9,124 @@
       "source_version": 1,
       "target_version": 1,
       "operator": "pawan.malik",
-      "timestamp": "2026-02-23T13:09:15.334848Z",
+      "timestamp": "2026-02-24T06:01:04.600427Z",
+      "dry_run": false,
+      "status": "success"
+    },
+    {
+      "migration_id": "mig_dfcx_billing_billing_payment_query_dev_to_qa_20260224063717",
+      "source_prompt_id": "dfcx_billing_billing_payment_query_dev",
+      "target_prompt_id": "dfcx_billing_billing_payment_query_qa",
+      "source_env": "dev",
+      "target_env": "qa",
+      "source_version": 3,
+      "target_version": 2,
+      "operator": "pawan.malik",
+      "timestamp": "2026-02-24T06:37:17.807084Z",
+      "dry_run": false,
+      "status": "success"
+    },
+    {
+      "migration_id": "mig_dfcx_billing_billing_payment_query_dev_to_qa_20260224064220",
+      "source_prompt_id": "dfcx_billing_billing_payment_query_dev",
+      "target_prompt_id": "dfcx_billing_billing_payment_query_qa",
+      "source_env": "dev",
+      "target_env": "qa",
+      "source_version": 3,
+      "target_version": 3,
+      "operator": "pawan.malik",
+      "timestamp": "2026-02-24T06:42:20.082996Z",
+      "dry_run": false,
+      "status": "success"
+    },
+    {
+      "migration_id": "mig_adk_tech_support_tech_support_troubleshoot_dev_to_qa_20260224065836",
+      "source_prompt_id": "adk_tech_support_tech_support_troubleshoot_dev",
+      "target_prompt_id": "adk_tech_support_tech_support_troubleshoot_qa",
+      "source_env": "dev",
+      "target_env": "qa",
+      "source_version": 1,
+      "target_version": 1,
+      "operator": "pawan.malik",
+      "timestamp": "2026-02-24T06:58:36.263860Z",
+      "dry_run": false,
+      "status": "success"
+    },
+    {
+      "migration_id": "mig_adk_tech_support_tech_support_troubleshoot_qa_to_staging_20260224070041",
+      "source_prompt_id": "adk_tech_support_tech_support_troubleshoot_qa",
+      "target_prompt_id": "adk_tech_support_tech_support_troubleshoot_staging",
+      "source_env": "qa",
+      "target_env": "staging",
+      "source_version": 1,
+      "target_version": 1,
+      "operator": "pawan.malik",
+      "timestamp": "2026-02-24T07:00:41.468996Z",
+      "dry_run": false,
+      "status": "success"
+    },
+    {
+      "migration_id": "mig_adk_tech_support_tech_support_troubleshoot_qa_to_staging_20260224070458",
+      "source_prompt_id": "adk_tech_support_tech_support_troubleshoot_qa",
+      "target_prompt_id": "adk_tech_support_tech_support_troubleshoot_staging",
+      "source_env": "qa",
+      "target_env": "staging",
+      "source_version": 1,
+      "target_version": 2,
+      "operator": "pawan.malik",
+      "timestamp": "2026-02-24T07:04:58.805777Z",
+      "dry_run": false,
+      "status": "success"
+    },
+    {
+      "migration_id": "mig_adk_tech_support_tech_support_troubleshoot_qa_to_staging_20260224070509",
+      "source_prompt_id": "adk_tech_support_tech_support_troubleshoot_qa",
+      "target_prompt_id": "adk_tech_support_tech_support_troubleshoot_staging",
+      "source_env": "qa",
+      "target_env": "staging",
+      "source_version": 1,
+      "target_version": 3,
+      "operator": "pawan.malik",
+      "timestamp": "2026-02-24T07:05:09.407705Z",
+      "dry_run": false,
+      "status": "success"
+    },
+    {
+      "migration_id": "mig_dfcx_billing_billing_payment_query_dev_to_qa_20260224070751",
+      "source_prompt_id": "dfcx_billing_billing_payment_query_dev",
+      "target_prompt_id": "dfcx_billing_billing_payment_query_qa",
+      "source_env": "dev",
+      "target_env": "qa",
+      "source_version": 3,
+      "target_version": 4,
+      "operator": "pawan.malik",
+      "timestamp": "2026-02-24T07:07:51.906389Z",
+      "dry_run": false,
+      "status": "success"
+    },
+    {
+      "migration_id": "mig_custom_account_mgmt_account_update_handler_dev_to_qa_20260224072433",
+      "source_prompt_id": "custom_account_mgmt_account_update_handler_dev",
+      "target_prompt_id": "custom_account_mgmt_account_update_handler_qa",
+      "source_env": "dev",
+      "target_env": "qa",
+      "source_version": 1,
+      "target_version": 1,
+      "operator": "pawan.malik",
+      "timestamp": "2026-02-24T07:24:33.619159Z",
+      "dry_run": false,
+      "status": "success"
+    },
+    {
+      "migration_id": "mig_dfcx_billing_billing_payment_query_dev_to_qa_20260224075212",
+      "source_prompt_id": "dfcx_billing_billing_payment_query_dev",
+      "target_prompt_id": "dfcx_billing_billing_payment_query_qa",
+      "source_env": "dev",
+      "target_env": "qa",
+      "source_version": 5,
+      "target_version": 5,
+      "operator": "pawan.malik",
+      "timestamp": "2026-02-24T07:52:12.492797Z",
       "dry_run": false,
       "status": "success"
     }
